--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ h1, h2, h3, h4, h5, h6, p, pre, blockquote, form, fieldset, table, ul {
   margin: .5em 0;
 }
 
+/* Preset new html5 tags for a block display */
+article, aside, footer, header, nav, section {
+	display: block;
+}
+
 em {
 	font-style: italic;
 }
@@ -108,26 +113,41 @@ img {
 	border: 0;
 }
 
-
-/* =Typography
+/* =Structure
 -----------------------------------------------------------------------------*/
 
 body {
-	font-size: 62.5%; 
+	background: #fff;
+	font-size: 62.5%;
 	font-family: Verdana, Arial, sans-serif;
 	color: #000;
 	text-align: center;
 }
 
 #wrapper {
+	width: 76em;
+	margin: 0 auto;
+	background: #fff;
 	text-align: left;
 }
 
 #masthead {
+	position: relative;
+	margin: 0;
+	border-bottom: 1px solid #666;
+	padding: 0;
+	background: #2222ae url('images/headbg.jpg');
+	height: 13em;
+}
+
+header {
 	text-align: left;
 }
 
 #content {
+	float: left;
+	width: 40em;
+	padding: 4em 2em 0 0;
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-size: 1.3em;
 	line-height: 1.5;
@@ -143,51 +163,19 @@ body {
 }
 
 #secondary {
+	float: left;
+	width: 16em;
+	padding: 8em 0em 0.5em 1em;
 	font-size: 1.2em;
 	color: #222;
 }
 
-#footer {
+footer {
 	font-size: 1.3em;
 	color: #ddd;
 }
 
-/* =Structure
------------------------------------------------------------------------------*/
-
-body {
-	background: #fff;
-}
-
-#wrapper {
-	width: 76em;
-	margin: 0 auto;
-	background: #fff;
-}
-
-#masthead {
-	position: relative;
-	margin: 0;
-	border-bottom: 1px solid #666;
-	padding: 0;
-	background: #2222ae url('images/headbg.jpg');
-	height: 13em;
-}
-
-
-#content {
-	float: left;
-	width: 40em;
-	padding: 4em 2em 0 0;
-}
-
-#secondary {
-	float: left;
-	width: 16em;
-	padding: 8em 0em 0.5em 1em;
-}
-
-#footer {
+#page-footer {
 	border-top: 1px solid #666;
 	padding: 0.5em 0;
 	margin-top: 0.5em;
@@ -197,7 +185,6 @@ body {
 
 /* =Headings
 -----------------------------------------------------------------------------*/
-
 
 h1 {
 	font-size: 1.8em;
@@ -246,18 +233,6 @@ h6 {
 	border-bottom: 1px solid #ccc;
 }
 
-.site {
-
-}
-
-.aside {
-
-}
-
-.commentheading {
-
-}
-
 
 /* =Links
 -----------------------------------------------------------------------------*/
@@ -289,6 +264,14 @@ a:visited {
 	text-decoration: none;
 }
 
+.comment-meta a:visited {
+    color: #22b;
+}
+
+#siteTitle a {
+    color: #ddd;
+}
+
 #secondary a {
 	text-decoration: none;
 	color: #22b;
@@ -299,14 +282,10 @@ a:visited {
 	color: #b22;
 }
 
-#footer a {
+footer a {
 	color: #9bf;
 }
 
-
-#branding a {
-	border: none;
-}
 
 ul#tidbits a {
 	text-decoration: none;
@@ -364,27 +343,24 @@ ul.sitemenu li a:hover {
 
 /* =Masthead
 -----------------------------------------------------------------------------*/
-
 #branding {
 	float: left;
 	margin-left: 5.5em;
-	padding-top: 1.5em;
+	padding: 1.5em 0;
 }
 
-#siteTitle a{
+#siteTitle{
 	font-size: 3.0em;
 	font-weight: bold;
 	color: #ddd;
 	text-decoration: none;
-}
-#siteTitle a:hover {
-	color: #b22;
-	text-decoration: none;
+	margin: 0;
 }
 
 #siteTagline {
 	font-size: 1.75em;
 	color: #ccc;
+	margin: 0;
 }
 
 
@@ -426,6 +402,7 @@ ul.sitemenu li a:hover {
 	font-size: 0.9em;
 	background: #f5f5f5;
 	padding: 0.5em;
+	color: #444;
 }
 
 .pubMeta {
@@ -449,6 +426,7 @@ ul.sitemenu li a:hover {
 	margin: 1em 1em;
 	font-size: 0.9em;
 	padding: 1.5em 0;
+	color: #444;
 }
 
 .edit {
@@ -590,7 +568,7 @@ ul.tags li {
 /* =Footer
 -----------------------------------------------------------------------------*/
 
-#footer p {
+footer p {
 	text-align: center;
 }
 
@@ -602,7 +580,7 @@ ul.tags li {
 }
 
 #pings {
-	margin:15px 0 2.5em 0;
+	margin: 1.0em 0 2.5em 0;
 }
 
 .ping-meta {
@@ -610,14 +588,6 @@ ul.tags li {
 	border: 1px solid #ccc;
 	padding: 0.4em;
 	margin-bottom: 1.5em;
-}
-
-ul#pings-list {
-	list-style-type: none;
-}
-
-ul#commentlist {
-	list-style-type: none;
 }
 
 .comment {
@@ -638,6 +608,7 @@ ul#commentlist {
 	background: #dedff1;
 	border: 1px solid #ccc;
 	padding: 0.4em;
+	color: #444;
 }
 
 .comments .error {
