--- a/style.css
+++ b/style.css
@@ -223,13 +223,13 @@ h6 {
 }
 
 
-#secondary h3 {
+#secondary h2 {
 	padding: 0;
 	margin: 0;
 	font-size: 1.45em;
 	font-size: 1.7em;
 	font-weight: bold;
-	color: #222;
+	color: #666;
 	border-bottom: 1px solid #ccc;
 }
 
@@ -512,6 +512,21 @@ blockquote.left {
 
 .postnext {
 	float: left;
+}
+
+/* =Block Content
+-----------------------------------------------------------------------------*/
+.block-type-recent_comments ul, .block-type-recent_posts ul, .block-type-tag_archives ul {
+	list-style-type: none;
+	margin-left: 1em;
+	padding-bottom: 1em;
+}
+
+.block-type-recent_comments ul, .block-type-recent_posts ul, .block-type-tag_archives li {
+	padding-bottom: 0.5em;
+}
+.block-type-recent_comments ul, .block-type-recent_posts ul, .block-type-tag_archives {
+	font-size: 1.1em;
 }
 
 /* =Secondary Content
